import { TabStackLayout } from "@/components/navigation/tab-stack-layout";

export default function SettingsLayout() {
  return <TabStackLayout title="Settings" />;
}
