import { TabStackLayout } from "@/components/navigation/tab-stack-layout";

export default function TrackLayout() {
  return <TabStackLayout title="Track" />;
}
