appId: com.pulsewellness.app
name: Utility reset app data state
tags:
  - util
---
- tapOn: "Settings"
- scrollUntilVisible:
    element:
      id: "settings-clear-all-data"
    direction: DOWN
- tapOn:
    id: "settings-clear-all-data"
- tapOn: "Clear Data"
- assertVisible:
    id: "settings-days-tracked"
    text: "0"
